--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Instagram</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
+
   <body>
-    <h1>This is a simple HTML + CSS template!</h1>
+    <header class="navbar">
+        <img src="/assets/img/logo.png" alt="Logo Instagram">
+
+        <nav class="nav-links">
+            <ul>
+                <li><a href="/compartilhar" title="Compartilhar"><ion-icon name="paper-plane-outline"></ion-icon></a></li>
+                <li><a href="/lugares" title="Lugares"><ion-icon name="compass-outline"></ion-icon></a></li>
+                <li><a href="/notificacoes" title="Notificações"><ion-icon name="heart-outline"></ion-icon></a></li>
+                <li><a href="/perfil" title="Perfil"><ion-icon name="person-outline"></ion-icon></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
