Ajustes de resposividade header

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Instagram</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
   <body>
-    <header class="navbar">
-        <img src="/assets/img/logo.png" alt="Logo Instagram">
-
-        <nav class="nav-links">
-            <ul>
+    <header>
+        <nav class="navbar">
+            <a href="/" title="Home"><img src="assets/img/logo.png" alt="Logo Instagram"></a>
+        
+            <ul class="nav-links">
                 <li><a href="/compartilhar" title="Compartilhar"><ion-icon name="paper-plane-outline"></ion-icon></a></li>
                 <li><a href="/lugares" title="Lugares"><ion-icon name="compass-outline"></ion-icon></a></li>
                 <li><a href="/notificacoes" title="Notificações"><ion-icon name="heart-outline"></ion-icon></a></li>
